# rtb-scraper

./: README.md  pyproject.toml
.github/workflows/: test.yml
scripts/: scrape.py
src/rtb_scraper/: constants.py  determination.py  register.py  settings.py  tribunal.py  utils.py
test/: test_determination.py  test_register.py  test_tribunals.py  test_utils.py
test/test_resources/: Determination_Order_200.txt.pdf.txt  Determination_Order_95.txt.pdf.txt  Determination_Order_96.txt.pdf.txt  TR0221-004752_Determination_Order.txt.pdf.txt  TR0320-004274_Determination_Order.txt.pdf.txt  TR0817-002570-DR0517-34518_Tribunal_Report.txt.pdf.txt  TR0819-003939_Determination_Order.txt.pdf.txt  TR0824-007885-DR0524-95719_original_report.txt.pdf.txt  TR0919-003968_Determination_Order.txt.pdf.txt  TR1020-004471_Determination_Order.txt.pdf.txt
